Bug 403617 - The currency New Kwanza Angolano has been replaced
Summary: The currency New Kwanza Angolano has been replaced
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: buildsystem (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-26 10:09 UTC by Andre
Modified: 2019-01-26 16:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andre 2019-01-26 10:09:05 UTC
SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2019-01-26 15:25:20 UTC
Git commit e01691a08631508bff4ad648b274caa8acd2cf00 by Thomas Baumgart.
Committed on 26/01/2019 at 13:40.
Pushed by tbaumgart into branch '5.0'.

Updated currency entry for Angolan Kwanza
FIXED-IN: 5.0.3

M  +1    -1    kmymoney/mymoney/mymoneyfile.cpp

https://commits.kde.org/kmymoney/e01691a08631508bff4ad648b274caa8acd2cf00