Updated currency entry for Angolan Kwanza

BUG: 403617
FIXED-IN: 5.0.3